--- a/BubbleBobble/imgui.ini
+++ b/BubbleBobble/imgui.ini
@@ -4,17 +4,39 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=502,143
-Size=562,339
+Pos=138,74
+Size=330,256
 Collapsed=0
 
 [Window][Example: Console]
-Pos=60,60
-Size=520,600
+Pos=815,19
+Size=465,701
 Collapsed=0
+DockId=0x00000006,0
 
 [Window][Example: Log]
-Pos=60,60
-Size=500,400
+ViewportPos=873,452
+ViewportId=0xBF126D42
+Size=1052,348
 Collapsed=0
+
+[Window][ExampleLayer]
+Pos=739,137
+Size=207,54
+Collapsed=0
+
+[Window][DockSpace Demo]
+Size=1575,821
+Collapsed=0
+
+[Window][Dear ImGui Style Editor]
+ViewportPos=988,300
+ViewportId=0x6D551092
+Size=339,701
+Collapsed=0
+
+[Docking][Data]
+DockSpace   ID=0x3BC79352 Pos=320,176 Size=1575,802 Split=X
+  DockNode  ID=0x00000001 Parent=0x3BC79352 SizeRef=813,701 CentralNode=1
+  DockNode  ID=0x00000006 Parent=0x3BC79352 SizeRef=465,701 Selected=0x46B5E99C
 
