--- a/Imp/Imp.vcxproj
+++ b/Imp/Imp.vcxproj
@@ -608,7 +608,9 @@
     <ClInclude Include="src\Imp\MouseButtonCodes.h" />
     <ClInclude Include="src\Imp\Renderer\Buffer.h" />
     <ClInclude Include="src\Imp\Renderer\GraphicsContext.h" />
+    <ClInclude Include="src\Imp\Renderer\RenderCommand.h" />
     <ClInclude Include="src\Imp\Renderer\Renderer.h" />
+    <ClInclude Include="src\Imp\Renderer\RendererAPI.h" />
     <ClInclude Include="src\Imp\Renderer\Shader.h" />
     <ClInclude Include="src\Imp\Renderer\VertexArray.h" />
     <ClInclude Include="src\Imp\Singleton.h" />
@@ -617,6 +619,7 @@
     <ClInclude Include="src\ImpPCH.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h" />
+    <ClInclude Include="src\Platform\OpenGL\OpenGLRendererAPI.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLShader.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLVertexArray.h" />
     <ClInclude Include="src\Platform\Windows\WindowsInput.h" />
@@ -633,11 +636,14 @@
       <PrecompiledHeader>Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="src\Imp\Renderer\Buffer.cpp" />
+    <ClCompile Include="src\Imp\Renderer\RenderCommand.cpp" />
     <ClCompile Include="src\Imp\Renderer\Renderer.cpp" />
+    <ClCompile Include="src\Imp\Renderer\RendererAPI.cpp" />
     <ClCompile Include="src\Imp\Renderer\Shader.cpp" />
     <ClCompile Include="src\Imp\Renderer\VertexArray.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLBuffer.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLContext.cpp" />
+    <ClCompile Include="src\Platform\OpenGL\OpenGLRendererAPI.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLShader.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLVertexArray.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsInput.cpp" />
